# ObjectDetectionCuda

./: .gitignore  LICENSE  README.md
benchmarks/: CMakeLists.txt
benchmarks/python/: benchmark.py
benchmarks/src/: bench.cc  images.hh
cpu_implem/: CMakeLists.txt
cpu_implem/src/: images.cc  images.hh  main.cc
cpu_implem_opencv/: CMakeLists.txt
cpu_implem_opencv/src/: main.cc
gpu_implem/: CMakeLists.txt
gpu_implem/src/: bench.cpp  images.cu  images.hpp  main.cpp  mandel.cpp  render.cu  render.hpp
python_implem/: requirements.txt
python_implem/src/: main.py
tools/: frame.py  object_detection.py  visualize.py
